--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
 <div class="hero">
 
 
-<img src="assets/hero-developer.png" alt="hero">
+<img class="imgh"  src="assets/hero-developer.png" alt="hero">
 
 <div class="hero2">
 
 <h2>"In 2025, I hope to become a Developer."</h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+<p>"In 2025, I hope to become a Developer. I am working hard every day to improve my skills in coding, problem-solving, and software development so I can achieve this dream."
+
+</p>
 
 <a href="#">
     <button class="btn2"> Let's Connect</button>
@@ -72,7 +74,7 @@
 <div class="blog1">
 
     <h2>Why Web Development??</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <p>"Web development allows me to build interactive websites and solve real-world problems using code. It’s a field where creativity and logic come together every day."</p>
 </div>
 
 <div class="blog2">
@@ -80,7 +82,7 @@
    <div class="blogs1">
 
 <h2>I will Do Coding and Change The World</h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+<p>"I will do coding to build smart solutions that make life easier and help shape a better future for all."</p>
 
 <a href="#">
     <button class="btn2"> Let's Discuss</button>
@@ -125,7 +127,9 @@
 <div class="inspiration">
 <div class="inspiration1">
 <h2>My Inspiration </h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+<p>"My inspiration comes from creators who use technology to solve real-world problems and make a positive impact through innovation, dedication, and continuous learning."
+
+</p>
 </div>
 
 <div class="yt">
