--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="header-logo">
 
 
-    <h2>Career <span>.Io</span> </h2>
+    <h2>Career <span  class="h2g"  >.Io</span> </h2>
 </div>
 
 <div>
@@ -73,7 +73,7 @@
 
 <div class="blog1">
 
-    <h2>Why Web Development??</h2>
+    <h2 class="h2g">Why Web Development??</h2>
     <p>"Web development allows me to build interactive websites and solve real-world problems using code. It’s a field where creativity and logic come together every day."</p>
 </div>
 
@@ -127,7 +127,7 @@
 
 <div class="inspiration">
 <div class="inspiration1">
-<h2>My Inspiration </h2>
+<h2 class="h2g">My Inspiration </h2>
 <p>"My inspiration comes from creators who use technology to solve real-world problems and make a positive impact through innovation, dedication, and continuous learning."
 
 </p>
@@ -160,7 +160,7 @@
 
 
 
-<h2>My Current Target</h2>
+<h2 class="h2g">My Current Target</h2>
 <p>
     
 I will complete my targets ontime and kickstart my career
@@ -228,7 +228,7 @@ HTML
 <div class="footer">
 
     <div class="footer1">
-        <h2>Career <span >.Io</span></h2>
+        <h2>Career <span class="h2g" >.Io</span></h2>
         <p>© 2025 Parvej Ahmed. An Open Commitment by F.Zihad.</p>
     </div>
 
@@ -240,6 +240,11 @@ HTML
     <img src="assets/github.png" alt="">
     </div>
 </div>
+
+
+
+
+
 </footer>
 
 </body>
